maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:8: error: not found: value random3
    		random3() match
                ^