maze.lessons.maze.pledge.PledgeMaze.scala.code
//var virage = 0

override def run() 
{	
	while(!estSurBiscuit)
    {
    		random3() match
    		{
    			case 0 => if(!estFaceMur) avance()
    			case 1 => droite()
    			case 2 => gauche()
    		}
    }

    prendBiscuit()
	/*def keepHandOnSideWall()
	{
		gauche()
		if(estFaceMur())
		{
			droite()
			if(!estFaceMur())
				avance()
			else	
			{
				droite(); virage+=1
			}
		}
		else
		{
			avance(); virage-=1
		}
	}

	def isDirectionFree(): Boolean =
	{
		if(!estFaceMur() && getDirection()==Direction.NORTH)
			return true
		else return false		
	}

	while(!estSurBiscuit())
	{		
		while(isDirectionFree())
			avance()
		droite(); virage = virage +1
		
		while( virage!=0 && !estSurBiscuit())
			keepHandOnSideWall()
	}

	prendBiscuit()*/
}
